implmented act test array for form

--- a/public/Forms/New Student/New Student Form.html
+++ b/public/Forms/New Student/New Student Form.html
@@ -503,7 +503,7 @@
 
                         <div class="input-block">
                             <label for="studentTakingHonors" class="label">Taking Honors Class(es):</label>
-                            <select id="studenTakingHonors" class="input">
+                            <select id="studentTakingHonors" class="input">
                                     <option value="">Select an option</option>
                                     <option value="Yes">Yes</option>
                                     <option value="No">No</option>
