implementing the backend for registration

--- a/public/Forms/New Student/New Student Form.html
+++ b/public/Forms/New Student/New Student Form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>New Student</title>
     <link href="New Student.css" rel="stylesheet"></link>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
@@ -393,7 +393,7 @@
 
                     <div class="input-row">
                         <div class="input-block">
-                            <label for="studentAccomodations" class="label">Accomodations used:</label>
+                            <label for="studentAccomodations" class="label">Accommodations used:</label>
                             <input id="studentAccomodations" placeholder="None" class="input">
                         </div>
                     </div>
@@ -417,6 +417,7 @@
             </div>
             <div class="input-row buttonsDiv">
                 <button class="backButton" onclick="back()">Previous</button>
+                <button class="submitButton" onclick="update()">Update</button>
                 <button class="submitButton" onclick="submit()">Submit</button>
                 <button class="nextButton" onclick="next()">Next</button>
              </div>
@@ -583,6 +584,7 @@
             </div>
                 <div class="input-row buttonsDiv">
                     <button class="backButton" onclick="back()">Previous</button>
+                    <button class="submitButton" onclick="update()">Update</button>
                     <button class="submitButton" onclick="submit()">Submit</button>
                     <button class="nextButton" onclick="next()">Next</button>
                 </div>
