--- a/public/Sign-In/Sign-In.html
+++ b/public/Sign-In/Sign-In.html
@@ -24,7 +24,7 @@
       <img src = "../Images/Wasatch Logo.png">
       <div class="input-block">
         <label for="username" class="label">username</label>
-        <input type="text" placeholder="email address" id="username" class="input">
+        <input type="email" placeholder="email address" id="username" class="input">
       </div>
       <div class="input-block">
         <label for="password" class="label">password</label>
