--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <title>Index: Redirecting---></title>
 
     <!-- update the version number as needed -->
-    <script defer src="/__/firebase/8.2.7/firebase-app.js"></script>
+    <!-- <script defer src="/__/firebase/8.2.7/firebase-app.js"></script> -->
     <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/8.2.7/firebase-auth.js"></script>
+    <!-- <script defer src="/__/firebase/8.2.7/firebase-auth.js"></script>
     <script defer src="/__/firebase/8.2.7/firebase-database.js"></script>
     <script defer src="/__/firebase/8.2.7/firebase-firestore.js"></script>
     <script defer src="/__/firebase/8.2.7/firebase-functions.js"></script>
@@ -16,14 +16,14 @@
     <script defer src="/__/firebase/8.2.7/firebase-storage.js"></script>
     <script defer src="/__/firebase/8.2.7/firebase-analytics.js"></script>
     <script defer src="/__/firebase/8.2.7/firebase-remote-config.js"></script>
-    <script defer src="/__/firebase/8.2.7/firebase-performance.js"></script>
+    <script defer src="/__/firebase/8.2.7/firebase-performance.js"></script> -->
     <!-- 
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
     -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+    <!-- <script defer src="/__/firebase/init.js?useEmulator=true"></script> -->
 
-    <style media="screen">
+    <!-- <style media="screen">
       body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
       #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
       #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
@@ -36,10 +36,11 @@
         body, #message { margin-top: 0; background: white; box-shadow: none; }
         body { border-top: 16px solid #ffa100; }
       }
-    </style>
+    </style> -->
+    <script>window.location.href = "Sign-In/Sign-In.html";</script>
   </head>
   <body>
-    <div id="message">
+    <!-- <div id="message">
       <h2>Welcome</h2>
       <h1>Firebase Hosting Setup Complete</h1>
       <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
@@ -92,6 +93,6 @@
           loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
         }
       });
-    </script>
+    </script> -->
   </body>
 </html>
