--- a/public/Forms/New Student/New Student Form.html
+++ b/public/Forms/New Student/New Student Form.html
@@ -575,6 +575,17 @@
 
                     <div class="input-row">
                         <div class="input-block">
+                            <label for="studentTutoredBefore" class="label">Have you had tutoring before:</label>
+                            <select id=studentTutoredBefore class="input">
+                                    <option value="">Select an option</option>
+                                    <option value="Yes">Yes</option>
+                                    <option value="No">No</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="input-row">
+                        <div class="input-block">
                             <label for="studentMarketing" class="label finalInput">How did you hear about us:</label>
                             <input id="studentMarketing" placeholder="Referral? Instagram? Web Search?" class="input finalInput">
                         </div>
