--- a/public/post-sign-in.html
+++ b/public/post-sign-in.html
@@ -32,7 +32,7 @@
 
         <div class="input-block">
           <label class="label">Active Students</label>
-          <select id="activeStudents" name="active-students">
+          <select id="activeStudents" name="active-students" onchange="activeStudentSelected(this)">
             <option disabled selected>Choose a student</option>
           </select>
         </div>
