--- a/public/inquiry.html
+++ b/public/inquiry.html
@@ -23,6 +23,7 @@
             <h2>Inquiry</h2>
         </div>
         <div id="form-scroll-block">
+          <div id="spinnyBoi" class="loader"></div>
           <form onsubmit="return false">
             <div class="input-row">
               <div class="input-block">
