--- a/public/Forms/New Student/New Student Form.html
+++ b/public/Forms/New Student/New Student Form.html
@@ -31,6 +31,7 @@
             </ul>
         </div>-->
             <div id="form-scroll-block">
+                <div class="loader spinnyBoi"></div>
                 <form>
                     <div class="input-row">
                         <div class="input-block">
@@ -430,6 +431,7 @@
                 <h2>Student Information</h2>
             </div>
             <div id="form-scroll-block">
+                <div class="loader spinnyBoi"></div>
                 <form>
                     <div class="input-row">
                         <div class="input-block">
