added error message under buttons

--- a/public/Forms/New Student/New Student Form.html
+++ b/public/Forms/New Student/New Student Form.html
@@ -423,6 +423,9 @@
                 <button class="submitButton" onclick="submit()">Submit</button>
                 <button class="nextButton" onclick="next()">Next</button>
              </div>
+             <div class="input-row">
+                <p id="errMsg" style="color: red"></p>
+            </div>
         </div>
 
 
@@ -602,6 +605,9 @@
                     <button class="submitButton" onclick="update()">Update</button>
                     <button class="submitButton" onclick="submit()">Submit</button>
                     <button class="nextButton" onclick="next()">Next</button>
+                </div>
+                <div class="input-row">
+                    <p id="errMsg" style="color: red"></p>
                 </div>
         </div>
     </section>  
