--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -19,201 +19,6 @@
 
 <body onload="initialSetup()">
     <section id="section">
-        <div id = "homeworkTestsForm" class = "metaForm">
-            <div id = "homeworkTestsTabs" class = "input-row">
-
-                <div class = "first testTab button2" onclick = "openForm('inCenterTestsForm')">
-                    In-Center
-                </div>
-
-                <div class = "selected testTab button2" onclick = "openForm('homeworkTestsForm')">
-                    Homework
-                </div>
-
-                <div class = "testTab button2" onclick = "openForm('otherTestsForm')">
-                    Other
-                </div>
-
-            </div>
-
-            <div id = "homeworkStatusDiv" class = "input-row-center">
-
-                <button class = "button">
-                    First Session
-                </button>
-
-                <button class = "button">
-                    Took Test
-                </button>
-
-            </div>
-
-            <div id = "homeworkTests" class = "tests">
-
-                <div class = "gridBox">
-                    Tests
-                </div>
-
-                <div class = "gridBox">
-                    English
-                </div>
-
-                <div class = "gridBox">
-                    Math
-                </div>
-
-                <div class = "gridBox">
-                    Reading
-                </div>
-
-                <div class = "gridBox">
-                    Science
-                </div>
-
-                <div class = "gridBox">
-                    B02
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox">
-                    74F
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox">
-                    72F
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox">
-                    B04
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox">
-                    71H
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox">
-                    A11
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox">
-                    74C
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox">
-                    71G
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-            </div>
-                <div class = "input-row-center formEnd">
-
-                    <button class = "button" onclick = "openForm('dailyLog')">
-                        Back
-                    </button>
-
-                    <button class = "button">
-                        Submit
-                    </button>
-
-                </div>
-
-
-        </div>
-
 
         <div id = "inCenterTestsForm" class = "metaForm">
             <div id = "inCenterTestsTabs" class = "input-row">
@@ -380,6 +185,202 @@
 
                 <div class = "gridBox">
                     69A
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+            </div>
+                <div class = "input-row-center formEnd">
+
+                    <button class = "button" onclick = "openForm('dailyLog')">
+                        Back
+                    </button>
+
+                    <button class = "button">
+                        Submit
+                    </button>
+
+                </div>
+
+
+        </div>
+
+
+        <div id = "homeworkTestsForm" class = "metaForm">
+            <div id = "homeworkTestsTabs" class = "input-row">
+
+                <div class = "first testTab button2" onclick = "openForm('inCenterTestsForm')">
+                    In-Center
+                </div>
+
+                <div class = "selected testTab button2" onclick = "openForm('homeworkTestsForm')">
+                    Homework
+                </div>
+
+                <div class = "testTab button2" onclick = "openForm('otherTestsForm')">
+                    Other
+                </div>
+
+            </div>
+
+            <div id = "homeworkStatusDiv" class = "input-row-center">
+
+                <button class = "button">
+                    First Session
+                </button>
+
+                <button class = "button">
+                    Took Test
+                </button>
+
+            </div>
+
+            <div id = "homeworkTests" class = "tests">
+
+                <div class = "gridBox">
+                    Tests
+                </div>
+
+                <div class = "gridBox">
+                    English
+                </div>
+
+                <div class = "gridBox">
+                    Math
+                </div>
+
+                <div class = "gridBox">
+                    Reading
+                </div>
+
+                <div class = "gridBox">
+                    Science
+                </div>
+
+                <div class = "gridBox">
+                    B02
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox">
+                    74F
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox">
+                    72F
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox">
+                    B04
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox">
+                    71H
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox">
+                    A11
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox">
+                    74C
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox">
+                    71G
                 </div>
 
                 <div class = "gridBox button2">
@@ -707,13 +708,10 @@
                     <textarea placeholder="Session Notes" id = "textBlock" rows = "10" cols="80"></textarea>
                 </div>
 
-                <div class = "input-block">
-                    <div class = "input-row">
-                        <h3 id = "sessionPractice1">Practice</h3>
-                        <img src="../../Images/Add Button.png" alt="add practice ACT test" height=25px width=25px
-                            class="button" id="addPracticeACTButton" onclick="addPracticeTest(1)">
-                        <img src="../../Images/Remove Button.png" alt="remove practice ACT test" height=25px width=25px
-                            class="button" id="removePracticeACTButton" onclick="removePracticeTest(1)">
+                <div class = "input-row">
+                    <div class = "input-block">
+                        <label class="label">Practice Tests</label>
+                        <button type = "button" onclick = "openForm('inCenterTestsForm')">In-Center Tests</button>
                     </div>
                 </div>
 
