--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Post Sign In</title>
-    <link href="post-sign-in.css" rel="stylesheet">
+    <title>Admin Dash</title>
+    <link href="Admin.css" rel="stylesheet">
 
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
@@ -12,8 +12,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-functions.js"></script>
 
-    <script src="Site Templates/site-wide.js"></script>
-    <script src="post-sign-in.js"></script>
+    <script src="../Site Templates/site-wide.js"></script>
+    <script src="Admin.js"></script>
 
   </head>
 
